`Refactored front-end code for Hover Search feature and added footer section`

--- a/src/frontPage.html
+++ b/src/frontPage.html
@@ -20,7 +20,7 @@
                 <span>USD<span class="bi bi-chevron-down"></span></span>
                 <span>English<span class="bi bi-chevron-down"></span></span>
             </div>
-            <div>
+            <div class="span-1">
                 <span>Shipping</span>
                 <span>FAQ</span>
                 <span>Contact</span>
@@ -50,7 +50,12 @@
             </nav>
         </div>
         <div class="short-cuts">
-            <span class="bi bi-search"></span>
+            <div class="search-container">
+                <span class="bi bi-search search-icon"></span>
+                <div class="search-input">
+                    <input type="text" placeholder="Search...">
+                </div>
+            </div>
             <span class="bi bi-person"></span>
             <span class="bi bi-heart"></span>
             <span class="bi bi-cart4"></span>
@@ -82,19 +87,67 @@
         </main>
         <div class="services">
             <div class="truck-service">
-                <span class="bi bi-truck">FREE SHIPPING</span>
+                <span><span class="bi bi-truck"></span>FREE SHIPPING</span>
             </div>
             <div>
-                <span class="bi bi-arrow-left-right">FREE RETURNS</span>
+                <span><span class="bi bi-arrow-left-right"></span>FREE RETURNS</span>
             </div>
             <div>
-                <span class="bi bi-lock">SECURE CHECKOUT</span>
+                <span class="bi bi-lock"></span><span>SECURE CHECKOUT</span>
             </div>
             <div>
-                <span class="bi bi-tag">OVER 10,000 STYLES</span>
+                <span><span class="bi bi-tag"></span>10,000 STYLES</span>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-row-1">
+            <div class="footer-title">Want Style Idea's and Treats?</div>
+            <div>
+                <span class="email">Drop a email here</span>
+                <span class="subscribe">Subscribe</span>
+            </div>
+        </div>
+        <div class="footer-row-2">
+            <div>
+                <span class="footer-brand-title">ShopifyMart.</span>
+                <aside>
+                    <span class="bi bi-facebook"></span>
+                    <span class="bi bi-twitter"></span>
+                    <span class="bi bi-instagram"></span>
+                    <span class="bi bi-youtube"></span>
+                    <span class="bi bi-linkedin"></span>
+                </aside>
+            </div>
+            <div>
+                <span class="service-title">SUPPORT</span>
+                <span>Contact Us</span>
+                <span>FAQ's</span>
+                <span>Size Guide</span>
+                <span>Shipping & Returns</span>
+            </div>
+            <div>
+                <span class="service-title">SHOP</span>
+                <span>Men's Shopping</span>
+                <span>Women's Shopping</span>
+                <span>Kid's Shopping</span>
+                <span>Discounts</span>
+            </div>
+            <div>
+                <span class="service-title">COMPANY</span>
+                <span>Our Story</span>
+                <span>Careers</span>
+                <span>Terms & Conditions</span>
+                <span>Privacy & Cookie policy</span>
+            </div>
+            <div>
+                <span class="service-title">CONTACT</span>
+                <span>1-202-55-0150</span>
+                <span>1-202-222-2306</span>
+                <span>help@shopifymart.com</span>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
