--- a/index.html
+++ b/index.html
@@ -3,228 +3,56 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopper</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <title>Hover Search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <style>
-        .header-row-1 {
-            background-color: #e6e4e4;
-            padding: 15px;
-            font-family: Arial;
-            font-size: 14px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+        .search-container {
+            position: relative;
+            display: inline-block;
         }
 
-        .header-row-1 span {
-            padding-left: 10px;
-            padding-right: 10px;
+        .search-input {
+            position: absolute;
+            left: 30px;
+            top: 0;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
         }
 
-        .header-row-2 {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            padding: 40px;
-            font-size: 20px;
-            font-family: Arial;
-        }
-
-        .brand-title {
-            font-size: 30px;
-            font-weight: bold;
-        }
-
-        nav span {
-            padding-left: 15px;
-            padding-right: 15px;
-            font-size: 18px;
-        }
-
-        .short-cuts span {
-            padding-left: 5px;
-            padding-right: 5px;
-        }
-
-        article {
-            background-color: black;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-family: Arial;
-            font-size: 16px;
-        }
-
-        .bi-lightning-fill {
-            color: gold;
-        }
-
-        main {
-            height: 450px;
-            display: grid;
-            grid-template-columns: 4fr 4fr 4fr;
-            margin-top: 10px;
-        }
-
-        .women-fashion {
-            background-image: url("./images/women-fashion.jpg");
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            opacity: 0.8;
-        }
-
-        .men-fashion {
-            background-image: url("./images/men-fashion.jpg");
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            opacity: 0.8;
-        }
-
-        .kids-fashion {
-            background-image: url("./images/kids-fashion.jpg");
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            opacity: 0.8;
-        }
-
-        .main-title {
-            font-family: Arial;
-            font-size: 50px;
-            font-weight: bold;
-            color: white;
-            text-shadow: 2px 2px 2px black;
-        }
-
-        .btn-shop {
-            background-color: white;
-            padding: 10px;
-            width: 140px;
-            font-family: Arial;
-            text-align: center;
-            box-shadow: 2px 2px 2px black;
-            border-radius: 5px;
-        }
-
-        .women-fashion:hover,
-        .men-fashion:hover,
-        .kids-fashion:hover {
+        .search-container:hover .search-input {
             opacity: 1;
-            cursor: grab;
+            pointer-events: auto;
         }
 
-        .services {
-            display: grid;
-            grid-template-columns: 3fr 3fr 3fr 3fr;
-            padding: 20px;
-            margin-top: 20px;
+        .search-icon {
+            font-size: 20px;
+            color: #333;
+            cursor: pointer;
+            transition: color 0.3s;
         }
 
-        .services .bi-truck,
-        .bi-tag,
-        .bi-lock,
-        .bi-arrow-left-right {
-            color: red;
+        .search-icon:hover {
+            color: #007bff;
+        }
+
+        .search-input input {
+            padding: 5px 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <div class="header-row-1">
-            <div>
-                <span class="bi bi-truck"> FREE SHIPPING WORLDWIDE </span>
-                <span>United States <span class="bi bi-chevron-down"></span> </span>
-                <span>USD <span class="bi bi-chevron-down"></span> </span>
-                <span>English <span class="bi bi-chevron-down"></span> </span>
-            </div>
-            <div>
-                <span>Shipping</span>
-                <span>FAQ</span>
-                <span>Contact</span>
-            </div>
-            <div>
-                <aside>
-                    <span class="bi bi-facebook"></span>
-                    <span class="bi bi-twitter"></span>
-                    <span class="bi bi-instagram"></span>
-                    <span class="bi bi-youtube"></span>
-                </aside>
-            </div>
+
+    <div class="search-container">
+        <i class="bi bi-search search-icon"></i>
+        <div class="search-input">
+            <input type="text" placeholder="Search...">
         </div>
-        <div class="header-row-2">
-            <div>
-                <span class="brand-title">Shopper.</span>
-            </div>
-            <div>
-                <nav>
-                    <span>Home</span>
-                    <span>Catalog</span>
-                    <span>Shop</span>
-                    <span>Blog</span>
-                    <span>Pages</span>
-                    <span>Docs</span>
-                </nav>
-            </div>
-            <div class="short-cuts">
-                <span class="bi bi-search"></span>
-                <span class="bi bi-person"></span>
-                <span class="bi bi-heart"></span>
-                <span class="bi bi-cart4"></span>
-            </div>
-        </div>
-    </header>
-    <section>
-        <article>
-            <span class="bi bi-lightning-fill"></span>
-            <span>HAPPY HOLIDAY DEALS ON EVERYTHING</span>
-            <span class="bi bi-lightning-fill"></span>
-        </article>
-        <main>
-            <div class="women-fashion">
-                <div class="main-title">Women</div>
-                <div class="btn-shop">
-                    Shop Women <span class="bi bi-arrow-right"></span>
-                </div>
-            </div>
-            <div class="men-fashion">
-                <div class="main-title">Men</div>
-                <div class="btn-shop">
-                    Shop Men <span class="bi bi-arrow-right"></span>
-                </div>
-            </div>
-            <div class="kids-fashion">
-                <div class="main-title">Kids</div>
-                <div class="btn-shop">
-                    Shop Kids <span class="bi bi-arrow-right"></span>
-                </div>
-            </div>
-        </main>
-        <div class="services">
-            <div>
-                <span class="bi bi-truck"> </span> FREE SHIPPING
-            </div>
-            <div>
-                <span class="bi bi-arrow-left-right"> </span> FREE RETURNS
-            </div>
-            <div>
-                <span class="bi bi-lock"> </span> SECURE SHOPPING
-            </div>
-            <div>
-                <span class="bi bi-tag"> </span> OVER 10,000 STYLES
-            </div>
-        </div>
-    </section>
+    </div>
+
 </body>
 
 </html>
