--- a/index.html
+++ b/index.html
@@ -3,56 +3,46 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hover Search</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <style>
-        .search-container {
-            position: relative;
-            display: inline-block;
-        }
-
-        .search-input {
-            position: absolute;
-            left: 30px;
-            top: 0;
-            opacity: 0;
-            pointer-events: none;
-            transition: opacity 0.3s ease;
-        }
-
-        .search-container:hover .search-input {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        .search-icon {
+        footer {
+            background-color: black;
+            color: white;
             font-size: 20px;
-            color: #333;
-            cursor: pointer;
-            transition: color 0.3s;
+            padding: 10px;
+            display: grid;
+            grid-template-columns: 6fr 6fr;
+            height: 300px;
         }
 
-        .search-icon:hover {
-            color: #007bff;
+        .left-panel {
+            display: grid;
+            grid-template-columns: 3fr 3fr 3fr 3fr;
         }
 
-        .search-input input {
-            padding: 5px 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        .right-panel {
+            display: grid;
+            grid-template-columns: 6fr 6fr;
+            border-left: 1px solid white;
+            padding-left: 20px;
         }
     </style>
 </head>
 
 <body>
-
-    <div class="search-container">
-        <i class="bi bi-search search-icon"></i>
-        <div class="search-input">
-            <input type="text" placeholder="Search...">
+    <footer>
+        <div class="left-panel">
+            <div>Col-1</div>
+            <div>Col-2</div>
+            <div>Col-3</div>
+            <div>Col-4</div>
         </div>
-    </div>
-
+        <div class="right-panel">
+            <div>Col-1</div>
+            <div>Col-2</div>
+        </div>
+    </footer>
 </body>
 
 </html>
